Fixing text alignment on h2.

--- a/css/styles.less
+++ b/css/styles.less
@@ -353,7 +353,7 @@ nav.navbar {
               font-size: 24px !important;
               font-family: @primary-font-family !important;
               margin: 20px 0 50px 0 !important;
-              
+              text-align: center;
             }
             
             h3 {
